--- a/meniu.html
+++ b/meniu.html
@@ -1,16 +1,16 @@
+<!DOCTYPE html>
 <html>
 <head>
 
 <title> Meniu StarBuzz</title>
 <link href="stil.css" rel="stylesheet">
-
 </head>
 <body>
-<h1>Bine ati venit la Starbuzz!</h1>
-<a href="mission.html">About us
-</a>
+<h1><a id="home">Bine ati venit la Starbuzz!</a></h1>
 
-<h2>Mocca 5RON</h2>
+<a href="mission.html" title="Our mission">About us
+</a>
+<h2 class=denumire>Mocca 5RON</h2>
 <img src="images/coffee.jpg">
 <p>Cafea,apa,lapte,zahar</p>
 
@@ -22,5 +22,6 @@
 <h2>Ceai negru 6RON</h2>
 <img src="images/tea.jpg">
 <p>Ceai negru,apa,mirodenii,zahar sau miere</p>
+<a href="meniu.html#home"><img width="50" height="50" src="images/arrow.png"</a>
 </body>
 </html>
